--- a/customer/src/main/resources/templates/register.html
+++ b/customer/src/main/resources/templates/register.html
@@ -51,7 +51,7 @@
 
                         <div class="input-form">
                             <div class="input-form">
-                            <input type="email" placeholder="Username" name="username" th:field = "*{username}" required>
+                            <input type="email" placeholder="Username" name="username" th:field = "*{userName}" required>
                         </div>
                     <div class="input-form">
                         <input type="password" placeholder="Password" name="password" th:field = "*{password}" required>
