--- a/admin/src/main/resources/templates/register.html
+++ b/admin/src/main/resources/templates/register.html
@@ -47,7 +47,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" th:field = "*{username}" class="form-control form-control-user" id="exampleInputEmail"
+                                    <input type="email" th:field = "*{userName}" class="form-control form-control-user" id="exampleInputEmail"
                                         placeholder="Email Username">
                                 </div>
                                 <div class="form-group row">
